# hardware_cockpit

./: .gitignore  MANIFEST.in  README.md  license.txt  package.json  pyproject.toml
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  format.js  main.jsx  styles.css
frontend/src/components/: CreateWizard.jsx  DetailPanel.jsx  FilterBar.jsx  ItemGrid.jsx
hardware_cockpit/: api.py  hooks.py  install.py  modules.txt
hardware_cockpit/hardware_cockpit/workspace/item_cockpit/: item_cockpit.json
hardware_cockpit/public/item_cockpit/: index.html
hardware_cockpit/public/item_cockpit/assets/: index-CmT3QCJ-.js  index-CmaKBaws.css
hardware_cockpit/public/js/: hardware_cockpit_desk.js
hardware_cockpit/tests/: test_api.py
hardware_cockpit/www/: item_cockpit.py
